force-app/main/default/objects/Entitlement__c/Entitlement__c.object-meta.xml
<CustomObject>
    <label>Qualified Entitlement</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entitlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>