force-app/main/default/objects/Entitlement__c/fields/Early_Bird__c.field-meta.xml
<CustomField>
    <fullName>Early_Bird__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Early Bird</label>
    <type>Checkbox</type>
</CustomField>