force-app/main/default/objects/Entitlement__c/fields/Early_Bird_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Early_Bird_End_Date__c</fullName>
    <label>Early Bird End Date</label>
    <type>Date</type>
</CustomField>