force-app/main/default/objects/Entitlement__c/fields/Entitlement_Article__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Article__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement Article</label>
    <referenceTo>Entitlement_article__c</referenceTo>
    <relationshipName>Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>