force-app/main/default/objects/Entitlement__c/fields/Scheme_Slab__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Slab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme Slab</label>
    <referenceTo>Scheme_Slab__c</referenceTo>
    <relationshipName>Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>